<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<item android:id="@+id/menu_home2"
    android:title="@string/menu_bottom_bar_home2"
    android:icon="@drawable/ic_menu_home2"/>

    <item android:id="@+id/menu_search2"
        android:title="@string/menu_bottom_bar_search"
        android:icon="@drawable/ic_menu_search"/>

    <item android:id="@+id/add2"
    android:title="@string/menu_bottom_bar_add"
        android:icon="@drawable/ic_menu_add"/>

    <item android:id="@+id/menu_mark2"
        android:title="@string/menu_bottom_bar_mark"
        android:icon="@drawable/ic_menu_mark"
        />

    <item android:id="@+id/menu_profile2"
        android:title="@string/menu_bottom_bar_profile"
        android:icon="@drawable/ic_menu_login"/>


</menu>